--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                         <i class="fas fa-trash"></i> Kosongkan
                     </button>
                     <button id="checkout" class="btn btn-success">
-                        <i class="fab fa-telegram"></i> Bayar via Telegram
+                        <i class="fab fa-whatsapp"></i> Bayar via WhatsApp
                     </button>
                 </div>
             </div>
