--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <i class="fab fa-telegram"></i>
                     </div>
                     <h3>Telegram</h3>
-                    <p></p>
+                    <p>JIKA WHATSAPP KENON BISA KE TELEGRAM AJA</p>
                     <a href="https://t.me/dikxz_store" class="btn btn-success">
                         <i class="fab fa-telegram"></i> Chat Sekarang
                     </a>
